# image_compresser

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/compresser/: compresser_node
devel/lib/pkgconfig/: compresser.pc
devel/share/compresser/cmake/: compresserConfig.cmake
src/compresser/: CMakeLists.txt
src/compresser/src/: compresser.cpp
